fix whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: "Arial", sans-serif;
   margin: 0;
@@ -36,8 +35,9 @@ body {
   transition: color 0.3s ease;
 }
 
-.content-container a:hover, .content-container a.active {
-  color: #007BFF;
+.content-container a:hover,
+.content-container a.active {
+  color: #007bff;
 }
 /* Logo styles */
 .logo a {
@@ -76,7 +76,7 @@ body {
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  border: 5px solid #007BFF;
+  border: 5px solid #007bff;
 }
 
 .small-description {
@@ -85,11 +85,12 @@ body {
 }
 
 /* Other section styles */
-#about, #experience, #projects, #contact {
+#about,
+#experience,
+#projects,
+#contact {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  min-height: 100vh;
   padding: 50px 20px;
   text-align: center;
   background-color: #f8f9fa;
